src/test/resources/json/invalid_inputs/null_commands.json.except
No list of commands given.